rust/foxglove/src/snapshots/foxglove__schemas__tests__grid_bincode_snapshot.snap
---
source: rust/foxglove/src/schemas.rs
expression: "format!(\"{bytes:#04x?}\")"
---
[
    0x01,
    0xd2,
    0x02,
    0x96,
    0x49,
    0x15,
    0xcd,
    0x5b,
    0x07,
    0x03,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x6d,
    0x61,
    0x70,
    0x01,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0xf0,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x40,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x08,
    0x40,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0xf0,
    0x3f,
    0x0a,
    0x00,
    0x00,
    0x00,
    0x01,
    0x9a,
    0x99,
    0x99,
    0x99,
    0x99,
    0x99,
    0xb9,
    0x3f,
    0x9a,
    0x99,
    0x99,
    0x99,
    0x99,
    0x99,
    0xb9,
    0x3f,
    0x28,
    0x00,
    0x00,
    0x00,
    0x04,
    0x00,
    0x00,
    0x00,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x09,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x65,
    0x6c,
    0x65,
    0x76,
    0x61,
    0x74,
    0x69,
    0x6f,
    0x6e,
    0x00,
    0x00,
    0x00,
    0x00,
    0x07,
    0x00,
    0x00,
    0x00,
    0x08,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x40,
]
