rust/foxglove/src/snapshots/foxglove__schemas__tests__grid_cbor_snapshot.snap
---
source: rust/foxglove/src/schemas.rs
expression: "format!(\"{bytes:#04x?}\")"
---
[
    0xa9,
    0x69,
    0x74,
    0x69,
    0x6d,
    0x65,
    0x73,
    0x74,
    0x61,
    0x6d,
    0x70,
    0xa2,
    0x63,
    0x73,
    0x65,
    0x63,
    0x1a,
    0x49,
    0x96,
    0x02,
    0xd2,
    0x64,
    0x6e,
    0x73,
    0x65,
    0x63,
    0x1a,
    0x07,
    0x5b,
    0xcd,
    0x15,
    0x68,
    0x66,
    0x72,
    0x61,
    0x6d,
    0x65,
    0x5f,
    0x69,
    0x64,
    0x63,
    0x6d,
    0x61,
    0x70,
    0x64,
    0x70,
    0x6f,
    0x73,
    0x65,
    0xa2,
    0x68,
    0x70,
    0x6f,
    0x73,
    0x69,
    0x74,
    0x69,
    0x6f,
    0x6e,
    0xa3,
    0x61,
    0x78,
    0xf9,
    0x3c,
    0x00,
    0x61,
    0x79,
    0xf9,
    0x40,
    0x00,
    0x61,
    0x7a,
    0xf9,
    0x42,
    0x00,
    0x6b,
    0x6f,
    0x72,
    0x69,
    0x65,
    0x6e,
    0x74,
    0x61,
    0x74,
    0x69,
    0x6f,
    0x6e,
    0xa4,
    0x61,
    0x78,
    0xf9,
    0x00,
    0x00,
    0x61,
    0x79,
    0xf9,
    0x00,
    0x00,
    0x61,
    0x7a,
    0xf9,
    0x00,
    0x00,
    0x61,
    0x77,
    0xf9,
    0x3c,
    0x00,
    0x6c,
    0x63,
    0x6f,
    0x6c,
    0x75,
    0x6d,
    0x6e,
    0x5f,
    0x63,
    0x6f,
    0x75,
    0x6e,
    0x74,
    0x0a,
    0x69,
    0x63,
    0x65,
    0x6c,
    0x6c,
    0x5f,
    0x73,
    0x69,
    0x7a,
    0x65,
    0xa2,
    0x61,
    0x78,
    0xfb,
    0x3f,
    0xb9,
    0x99,
    0x99,
    0x99,
    0x99,
    0x99,
    0x9a,
    0x61,
    0x79,
    0xfb,
    0x3f,
    0xb9,
    0x99,
    0x99,
    0x99,
    0x99,
    0x99,
    0x9a,
    0x6a,
    0x72,
    0x6f,
    0x77,
    0x5f,
    0x73,
    0x74,
    0x72,
    0x69,
    0x64,
    0x65,
    0x18,
    0x28,
    0x6b,
    0x63,
    0x65,
    0x6c,
    0x6c,
    0x5f,
    0x73,
    0x74,
    0x72,
    0x69,
    0x64,
    0x65,
    0x04,
    0x66,
    0x66,
    0x69,
    0x65,
    0x6c,
    0x64,
    0x73,
    0x81,
    0xa3,
    0x64,
    0x6e,
    0x61,
    0x6d,
    0x65,
    0x69,
    0x65,
    0x6c,
    0x65,
    0x76,
    0x61,
    0x74,
    0x69,
    0x6f,
    0x6e,
    0x66,
    0x6f,
    0x66,
    0x66,
    0x73,
    0x65,
    0x74,
    0x00,
    0x64,
    0x74,
    0x79,
    0x70,
    0x65,
    0x07,
    0x64,
    0x64,
    0x61,
    0x74,
    0x61,
    0x48,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x40,
]
